PY-90937 Eliminate `PySyntheticCallHelper`
GitOrigin-RevId: 86afad42ce2456c48ec697b951779ba146b11e84