@@ -4,6 +4,7 @@ import com.intellij.openapi.util.Ref;
 import com.intellij.psi.PsiElement;
 import com.intellij.psi.PsiFile;
 import com.intellij.psi.util.QualifiedName;
+import com.intellij.util.ObjectUtils;
 import com.intellij.util.containers.ContainerUtil;
 import com.jetbrains.python.psi.PyClass;
 import com.jetbrains.python.psi.PyDecoratable;
@@ -15,6 +16,7 @@ import com.jetbrains.python.psi.PyKnownDecoratorUtil;
 import com.jetbrains.python.psi.PyNamedParameter;
 import com.jetbrains.python.psi.PyTypedElement;
 import com.jetbrains.python.psi.impl.ParamHelper;
+import com.jetbrains.python.psi.impl.PyCallExpressionHelper;
 import com.jetbrains.python.psi.types.PyAnyType;
 import com.jetbrains.python.psi.types.PyCallableParameter;
 import com.jetbrains.python.psi.types.PyCallableParameterImpl;
@@ -24,8 +26,8 @@ import com.jetbrains.python.psi.types.PyClassType;
 import com.jetbrains.python.psi.types.PyClassTypeImpl;
 import com.jetbrains.python.psi.types.PyConcatenateType;
 import com.jetbrains.python.psi.types.PyParamSpecType;
-import com.jetbrains.python.psi.types.PySyntheticCallHelper;
 import com.jetbrains.python.psi.types.PyType;
+import com.jetbrains.python.psi.types.PyCallableArgument;
 import com.jetbrains.python.psi.types.PyTypeChecker;
 import com.jetbrains.python.psi.types.PyTypeProviderBase;
 import com.jetbrains.python.psi.types.TypeEvalContext;
@@ -233,13 +235,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
 
       PyCallableType decoratorType = getDecoratorType(decorator, argument, context);
       if (decoratorType != null) {
-        PyType newType = PySyntheticCallHelper.getCallTypeOnTypesOnly(
-          decoratorType,
-          null,
-          Collections.singletonList(argument),
-          context
-        );
-
+        PyType newType = PyCallExpressionHelper.getCallType(decoratorType, List.of(new PyCallableArgument(argument)), context);
         if (newType instanceof PyCallableType newFunctionType) {
           currentType = newFunctionType;
         }
@@ -281,7 +277,8 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
       else {
         overloads = Collections.emptyList();
       }
-      return getDecoratorCalleeType(typedElement, Collections.singletonList(decoratedFunctionType), overloads, context);
+      return getDecoratorCalleeType(typedElement, Collections.singletonList(new PyCallableArgument(decoratedFunctionType)), overloads,
+                                    context);
     }
 
     return null;
@@ -299,7 +296,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
 
     // Shortcircuit:
     // if there are no overloads and the decorator is not generic,
-    // there's no need to `PySyntheticCallHelper.getCallTypeOnTypesOnly` to get its return type
+    // there's no need to `PyCallExpressionHelper.getCallType` to get its return type
     // and a simple `getReturnType` can be used instead
     if (typedElementType instanceof PyCallableType callableType &&
         !PyTypeChecker.hasGenerics(typedElementType, context) &&
@@ -327,13 +324,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
     // TODO: instead, we should return an UnsafeUnion of all possible overloads
     PyCallableType decoratorCalleeType = getDecoratorCalleeType(typedElement, List.of(), overloads, context);
     if (decoratorCalleeType != null) {
-      PyType newType = PySyntheticCallHelper.getCallTypeOnTypesOnly(
-        decoratorCalleeType,
-        null,
-        List.of(),
-        context
-      );
-
+      PyType newType = PyCallExpressionHelper.getCallType(decoratorCalleeType, List.of(), context);
       if (newType instanceof PyCallableType newFunctionType) {
         return newFunctionType;
       }
@@ -343,7 +334,7 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
   }
 
   private static @Nullable PyCallableType getDecoratorCalleeType(@NotNull PyTypedElement typedElement,
-                                                                 @NotNull List<@Nullable PyType> decoratorArgumentTypes,
+                                                                 @NotNull List<PyCallableArgument> arguments,
                                                                  @NotNull List<PyFunction> overloads,
                                                                  @NotNull TypeEvalContext context) {
     List<? extends PyTypedElement> resolvedElements;
@@ -352,7 +343,11 @@ public final class PyDecoratedFunctionTypeProvider extends PyTypeProviderBase {
         resolvedElements = List.of(resolvedFunction);
       }
       else {
-        resolvedElements = PySyntheticCallHelper.matchOverloadsByArgumentTypes(overloads, decoratorArgumentTypes, null, context);
+        List<PyCallableType> overloadTypes =
+          ContainerUtil.mapNotNull(overloads, overload -> ObjectUtils.tryCast(context.getType(overload), PyCallableType.class));
+        resolvedElements = ContainerUtil.mapNotNull(
+          PyCallExpressionHelper.selectMatchingOverloads(overloadTypes, arguments, context),
+          PyCallableType::getCallable);
       }
     }
     else {
